@@ -51,24 +51,7 @@ use PPI::Token ();
 
 our $VERSION = '1.277';
 
-our @ISA = "PPI::Token";
-
-sub __TOKENIZER__on_char {
-	my $class = shift;
-	my $t     = shift;
-
-	# Suck in until we find the closing paren (or the end of line)
-	pos $t->{line} = $t->{line_cursor};
-	die "regex should always match" if $t->{line} !~ m/\G(.*?\n?(?:\)|$))/gc;
-	$t->{token}->{content} .= $1;
-	$t->{line_cursor} += length $1;
-
-	# Shortcut if end of line
-	return 0 unless $1 =~ /\)$/;
-
-	# Found the closing paren
-	$t->_finalize_token->__TOKENIZER__on_char( $t );
-}
+our @ISA = "PPI::Token::Quote::Literal";
 
 =pod
 
