@@ -4,7 +4,7 @@
 
 use lib 't/lib';
 use PPI::Test::pragmas;
-use Test::More tests => 104 + ( $ENV{AUTHOR_TESTING} ? 1 : 0 );
+use Test::More tests => 120 + ( $ENV{AUTHOR_TESTING} ? 1 : 0 );
 
 use PPI ();
 use Helper 'safe_new';
@@ -34,7 +34,10 @@ PARSING: {
 	## invalid chars in prototype
 	check_w_subs \@sub_patterns, '(!-=|)', '(!-=|)', '!-=|';
 	## perl refuses to compile this
-	check_w_subs \@sub_patterns, '(()', '(()', '(';
+	check_w_subs \@sub_patterns, '(()', '(()', '(', 1;
+	check_w_subs \@sub_patterns, '((a))', '((a))', '(a)';
+	check_w_subs \@sub_patterns,    #
+	  "(\n(\na\n)\n)", "(\n(\na\n)\n)", "(a)";
 }
 
 sub check_w_subs {
@@ -46,7 +49,7 @@ sub check_w_subs {
 sub check {
 	local $Test::Builder::Level = $Test::Builder::Level + 1;
 	my ( $name, $block, $code_prototype, $expected_content,
-		$expected_prototype )
+		$expected_prototype, $tail )
 	  = @_;
 	my $desc = my $code = "$name$code_prototype$block";
 	$desc =~ s/\n/\\n/g;
@@ -60,9 +63,10 @@ sub check {
 		$all_prototypes = [] if !ref $all_prototypes;
 		is scalar(@$all_prototypes), 1, "got exactly one prototype";
 		my $prototype_obj = $all_prototypes->[0];
-		is $prototype_obj, $expected_content,
+		is $prototype_obj, $expected_content . ( $tail ? $block : "" ),
 		  "prototype object content matches";
-		is $prototype_obj->prototype, $expected_prototype,
+		is $prototype_obj->prototype,
+		  $expected_prototype . ( $tail ? ")$block" : "" ),
 		  "prototype characters match";
 	};
 	return;
