@@ -4,32 +4,33 @@
 
 use lib 't/lib';
 use PPI::Test::pragmas;
-use Test::More tests => 20 + ( $ENV{AUTHOR_TESTING} ? 1 : 0 );
+use Test::More tests => 23 + ( $ENV{AUTHOR_TESTING} ? 1 : 0 );
 use B qw( perlstring );
 
 use PPI ();
 use Helper 'safe_new';
 
-
 STRING: {
-	my $Document = safe_new \"print q{foo}, q!bar!, q <foo>;";
+	my $Document = safe_new \"print q{foo}, q!bar!, q <foo>, q((foo));";
 	my $literal = $Document->find('Token::Quote::Literal');
-	is( scalar(@$literal), 3, '->find returns three objects' );
+	is( scalar(@$literal), 4, '->find returns three objects' );
 	isa_ok( $literal->[0], 'PPI::Token::Quote::Literal' );
 	isa_ok( $literal->[1], 'PPI::Token::Quote::Literal' );
 	isa_ok( $literal->[2], 'PPI::Token::Quote::Literal' );
-	is( $literal->[0]->string, 'foo', '->string returns as expected' );
-	is( $literal->[1]->string, 'bar', '->string returns as expected' );
-	is( $literal->[2]->string, 'foo', '->string returns as expected' );
+	isa_ok( $literal->[3], 'PPI::Token::Quote::Literal' );
+	is( $literal->[0]->string, 'foo',   '->string returns as expected' );
+	is( $literal->[1]->string, 'bar',   '->string returns as expected' );
+	is( $literal->[2]->string, 'foo',   '->string returns as expected' );
+	is( $literal->[3]->string, '(foo)', '->string returns as expected' );
 }
 
-
 LITERAL: {
-	my $Document = safe_new \"print q{foo}, q!bar!, q <foo>;";
+	my $Document = safe_new \"print q{foo}, q!bar!, q <foo>, q((foo));";
 	my $literal = $Document->find('Token::Quote::Literal');
-	is( $literal->[0]->literal, 'foo', '->literal returns as expected' );
-	is( $literal->[1]->literal, 'bar', '->literal returns as expected' );
-	is( $literal->[2]->literal, 'foo', '->literal returns as expected' );
+	is( $literal->[0]->literal, 'foo',   '->literal returns as expected' );
+	is( $literal->[1]->literal, 'bar',   '->literal returns as expected' );
+	is( $literal->[2]->literal, 'foo',   '->literal returns as expected' );
+	is( $literal->[3]->literal, '(foo)', '->literal returns as expected' );
 }
 
 test_statement(
